--- a/js.html
+++ b/js.html
@@ -8,7 +8,7 @@
 <body>
     <strong> <header><h1>ACE-TECH</h1></header></strong>
      <section class="band">
-        <img src="image/jun2.jpg" alt="banner" style="height: 500px; width: 100%; ">
+        <img src="image/okin.jpg" alt="banner" style="height: 500px; width: 100%; ">
         <div class="teni">
             <h2>welcome to <br><span>Ace-Tech</span></h2>
         </div>
